feat: implement TLS security, certificate generation, and MongoDB replica set initialization scripts